--- a/stairclimber/countstairs/templates/countstairs/home.html
+++ b/stairclimber/countstairs/templates/countstairs/home.html
@@ -10,4 +10,5 @@
 {% csrf_token %}
  <input type="submit" value="Add" /> <input type="number" name="steps" min="-{{dailyStairs.total}}" step="1" value="0">
 </form>
-<a href="/editPreset"> Edit preset stair settings </a>
+<a href="/editPreset"> Edit preset stair settings </a> </br>
+<a href="/month"> View calendar </a>
